Properly centered cards on homepage, and stopped headings overflowing bigger than card width

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -87,7 +87,7 @@ ul.categories {
 /* Homepage styles */
 
 .grid-wrapper {
-    margin: auto;
+    margin: 0 auto;
     display: grid;
     grid-gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(21rem, 1fr));
@@ -96,7 +96,7 @@ ul.categories {
 
 article[class*="recipe-card"] {
     transition: all 0.1s;
-    max-width: 100%;
+    width: 300px;
     margin: 0 auto;
 }
 
@@ -106,7 +106,7 @@ article[class*="recipe-card"]:hover {
 }
 
 article[class*="recipe-card"] img {
-    width: 300px;
+    width: 100%;
     height: 450px;
     border-radius: 30px;
     border-color: #fff;
@@ -122,6 +122,7 @@ h1, h2 {
 article[class*="recipe-card"] h1 {
     letter-spacing: 0.5px;
     margin: 0;
+    max-width: 75%;
 }
 
 article[class*="recipe-card"] time {
